[package]
name = "pallet-domain-registrar"
version = "0.1.0"
authors = ["Alkaid <alkaidwe@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
log = { version = "0.4.14", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.7" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.7" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.7" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.7" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.7" }
pallet-proxy = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.7" }
primitives = { package = "polka-domain-primitives", path = "../../primitives", default-features = false }
nft = { package = "pallet-nft", path = "../nft", default-features = false }

orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false }
orml-nft = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false }

[dev-dependencies]
serde = { version = "1.0.124" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.7" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.7" }
max-encoded-len = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }

[features]
default = ['std']
std = [
	'codec/std',
	'log/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'sp-runtime/std',
	'sp-std/std',
	'pallet-balances/std',
	"pallet-proxy/std",
	"pallet-utility/std",
	'primitives/std',
	'nft/std',
	"orml-tokens/std",
	"orml-traits/std",
	"orml-nft/std",
]
runtime-benchmarks = ["frame-benchmarking"]
